src/grammar/InstructionSetParser.js
// Generated from src/grammar/InstructionSet.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var InstructionSetListener = require('./InstructionSetListener').InstructionSetListener;
var InstructionSetVisitor = require('./InstructionSetVisitor').InstructionSetVisitor;

var grammarFileName = "InstructionSet.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "':'", "'SKIP INSTRUCTION'", "'JUMP'", "'TO'", 
                     "'ON'", "'NONE'", "'TRUE'", "'FALSE'", "'PUSH'", "'HANDLER'", 
                     "'LITERAL'", "'CONSTANT'", "'PARAMETER'", "'POP'", 
                     "'COMPONENT'", "'LOAD'", "'VARIABLE'", "'MESSAGE'", 
                     "'DRAFT'", "'DOCUMENT'", "'STORE'", "'INVOKE'", "'WITH'", 
                     "'1'", "'ARGUMENT'", "'ARGUMENTS'", "'EXECUTE'", "'TARGET'", 
                     "'HANDLE'", "'EXCEPTION'", "'RESULT'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, "LABEL", "NUMBER", "LITERAL", 
                      "SYMBOL", "RESERVED", "EOL", "SPACE" ];

var ruleNames =  [ "document", "instructions", "step", "label", "variable", 
                   "instruction", "skipInstruction", "jumpInstruction", 
                   "pushInstruction", "popInstruction", "loadInstruction", 
                   "storeInstruction", "invokeInstruction", "executeInstruction", 
                   "handleInstruction" ];

function InstructionSetParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

InstructionSetParser.prototype = Object.create(antlr4.Parser.prototype);
InstructionSetParser.prototype.constructor = InstructionSetParser;

Object.defineProperty(InstructionSetParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

InstructionSetParser.EOF = antlr4.Token.EOF;
InstructionSetParser.T__0 = 1;
InstructionSetParser.T__1 = 2;
InstructionSetParser.T__2 = 3;
InstructionSetParser.T__3 = 4;
InstructionSetParser.T__4 = 5;
InstructionSetParser.T__5 = 6;
InstructionSetParser.T__6 = 7;
InstructionSetParser.T__7 = 8;
InstructionSetParser.T__8 = 9;
InstructionSetParser.T__9 = 10;
InstructionSetParser.T__10 = 11;
InstructionSetParser.T__11 = 12;
InstructionSetParser.T__12 = 13;
InstructionSetParser.T__13 = 14;
InstructionSetParser.T__14 = 15;
InstructionSetParser.T__15 = 16;
InstructionSetParser.T__16 = 17;
InstructionSetParser.T__17 = 18;
InstructionSetParser.T__18 = 19;
InstructionSetParser.T__19 = 20;
InstructionSetParser.T__20 = 21;
InstructionSetParser.T__21 = 22;
InstructionSetParser.T__22 = 23;
InstructionSetParser.T__23 = 24;
InstructionSetParser.T__24 = 25;
InstructionSetParser.T__25 = 26;
InstructionSetParser.T__26 = 27;
InstructionSetParser.T__27 = 28;
InstructionSetParser.T__28 = 29;
InstructionSetParser.T__29 = 30;
InstructionSetParser.T__30 = 31;
InstructionSetParser.LABEL = 32;
InstructionSetParser.NUMBER = 33;
InstructionSetParser.LITERAL = 34;
InstructionSetParser.SYMBOL = 35;
InstructionSetParser.RESERVED = 36;
InstructionSetParser.EOL = 37;
InstructionSetParser.SPACE = 38;

InstructionSetParser.RULE_document = 0;
InstructionSetParser.RULE_instructions = 1;
InstructionSetParser.RULE_step = 2;
InstructionSetParser.RULE_label = 3;
InstructionSetParser.RULE_variable = 4;
InstructionSetParser.RULE_instruction = 5;
InstructionSetParser.RULE_skipInstruction = 6;
InstructionSetParser.RULE_jumpInstruction = 7;
InstructionSetParser.RULE_pushInstruction = 8;
InstructionSetParser.RULE_popInstruction = 9;
InstructionSetParser.RULE_loadInstruction = 10;
InstructionSetParser.RULE_storeInstruction = 11;
InstructionSetParser.RULE_invokeInstruction = 12;
InstructionSetParser.RULE_executeInstruction = 13;
InstructionSetParser.RULE_handleInstruction = 14;

function DocumentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = InstructionSetParser.RULE_document;
    return this;
}

DocumentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DocumentContext.prototype.constructor = DocumentContext;

DocumentContext.prototype.instructions = function() {
    return this.getTypedRuleContext(InstructionsContext,0);
};

DocumentContext.prototype.EOF = function() {
    return this.getToken(InstructionSetParser.EOF, 0);
};

DocumentContext.prototype.EOL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(InstructionSetParser.EOL);
    } else {
        return this.getToken(InstructionSetParser.EOL, i);
    }
};


DocumentContext.prototype.enterRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.enterDocument(this);
	}
};

DocumentContext.prototype.exitRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.exitDocument(this);
	}
};

DocumentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof InstructionSetVisitor ) {
        return visitor.visitDocument(this);
    } else {
        return visitor.visitChildren(this);
    }
};




InstructionSetParser.DocumentContext = DocumentContext;

InstructionSetParser.prototype.document = function() {

    var localctx = new DocumentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, InstructionSetParser.RULE_document);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 33;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 30;
                this.match(InstructionSetParser.EOL); 
            }
            this.state = 35;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
        }

        this.state = 36;
        this.instructions();
        this.state = 40;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===InstructionSetParser.EOL) {
            this.state = 37;
            this.match(InstructionSetParser.EOL);
            this.state = 42;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 43;
        this.match(InstructionSetParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InstructionsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = InstructionSetParser.RULE_instructions;
    return this;
}

InstructionsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InstructionsContext.prototype.constructor = InstructionsContext;

InstructionsContext.prototype.step = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StepContext);
    } else {
        return this.getTypedRuleContext(StepContext,i);
    }
};

InstructionsContext.prototype.EOL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(InstructionSetParser.EOL);
    } else {
        return this.getToken(InstructionSetParser.EOL, i);
    }
};


InstructionsContext.prototype.enterRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.enterInstructions(this);
	}
};

InstructionsContext.prototype.exitRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.exitInstructions(this);
	}
};

InstructionsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof InstructionSetVisitor ) {
        return visitor.visitInstructions(this);
    } else {
        return visitor.visitChildren(this);
    }
};




InstructionSetParser.InstructionsContext = InstructionsContext;

InstructionSetParser.prototype.instructions = function() {

    var localctx = new InstructionsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, InstructionSetParser.RULE_instructions);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 45;
        this.step();
        this.state = 50;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 46;
                this.match(InstructionSetParser.EOL);
                this.state = 47;
                this.step(); 
            }
            this.state = 52;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StepContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = InstructionSetParser.RULE_step;
    return this;
}

StepContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StepContext.prototype.constructor = StepContext;

StepContext.prototype.instruction = function() {
    return this.getTypedRuleContext(InstructionContext,0);
};

StepContext.prototype.label = function() {
    return this.getTypedRuleContext(LabelContext,0);
};

StepContext.prototype.enterRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.enterStep(this);
	}
};

StepContext.prototype.exitRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.exitStep(this);
	}
};

StepContext.prototype.accept = function(visitor) {
    if ( visitor instanceof InstructionSetVisitor ) {
        return visitor.visitStep(this);
    } else {
        return visitor.visitChildren(this);
    }
};




InstructionSetParser.StepContext = StepContext;

InstructionSetParser.prototype.step = function() {

    var localctx = new StepContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, InstructionSetParser.RULE_step);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 54;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===InstructionSetParser.LABEL || _la===InstructionSetParser.EOL) {
            this.state = 53;
            this.label();
        }

        this.state = 56;
        this.instruction();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LabelContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = InstructionSetParser.RULE_label;
    return this;
}

LabelContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LabelContext.prototype.constructor = LabelContext;

LabelContext.prototype.LABEL = function() {
    return this.getToken(InstructionSetParser.LABEL, 0);
};

LabelContext.prototype.EOL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(InstructionSetParser.EOL);
    } else {
        return this.getToken(InstructionSetParser.EOL, i);
    }
};


LabelContext.prototype.enterRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.enterLabel(this);
	}
};

LabelContext.prototype.exitRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.exitLabel(this);
	}
};

LabelContext.prototype.accept = function(visitor) {
    if ( visitor instanceof InstructionSetVisitor ) {
        return visitor.visitLabel(this);
    } else {
        return visitor.visitChildren(this);
    }
};




InstructionSetParser.LabelContext = LabelContext;

InstructionSetParser.prototype.label = function() {

    var localctx = new LabelContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, InstructionSetParser.RULE_label);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 59;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===InstructionSetParser.EOL) {
            this.state = 58;
            this.match(InstructionSetParser.EOL);
        }

        this.state = 61;
        this.match(InstructionSetParser.LABEL);
        this.state = 62;
        this.match(InstructionSetParser.T__0);
        this.state = 63;
        this.match(InstructionSetParser.EOL);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VariableContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = InstructionSetParser.RULE_variable;
    return this;
}

VariableContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableContext.prototype.constructor = VariableContext;

VariableContext.prototype.SYMBOL = function() {
    return this.getToken(InstructionSetParser.SYMBOL, 0);
};

VariableContext.prototype.RESERVED = function() {
    return this.getToken(InstructionSetParser.RESERVED, 0);
};

VariableContext.prototype.enterRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.enterVariable(this);
	}
};

VariableContext.prototype.exitRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.exitVariable(this);
	}
};

VariableContext.prototype.accept = function(visitor) {
    if ( visitor instanceof InstructionSetVisitor ) {
        return visitor.visitVariable(this);
    } else {
        return visitor.visitChildren(this);
    }
};




InstructionSetParser.VariableContext = VariableContext;

InstructionSetParser.prototype.variable = function() {

    var localctx = new VariableContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, InstructionSetParser.RULE_variable);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 65;
        _la = this._input.LA(1);
        if(!(_la===InstructionSetParser.SYMBOL || _la===InstructionSetParser.RESERVED)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = InstructionSetParser.RULE_instruction;
    return this;
}

InstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InstructionContext.prototype.constructor = InstructionContext;

InstructionContext.prototype.skipInstruction = function() {
    return this.getTypedRuleContext(SkipInstructionContext,0);
};

InstructionContext.prototype.jumpInstruction = function() {
    return this.getTypedRuleContext(JumpInstructionContext,0);
};

InstructionContext.prototype.pushInstruction = function() {
    return this.getTypedRuleContext(PushInstructionContext,0);
};

InstructionContext.prototype.popInstruction = function() {
    return this.getTypedRuleContext(PopInstructionContext,0);
};

InstructionContext.prototype.loadInstruction = function() {
    return this.getTypedRuleContext(LoadInstructionContext,0);
};

InstructionContext.prototype.storeInstruction = function() {
    return this.getTypedRuleContext(StoreInstructionContext,0);
};

InstructionContext.prototype.invokeInstruction = function() {
    return this.getTypedRuleContext(InvokeInstructionContext,0);
};

InstructionContext.prototype.executeInstruction = function() {
    return this.getTypedRuleContext(ExecuteInstructionContext,0);
};

InstructionContext.prototype.handleInstruction = function() {
    return this.getTypedRuleContext(HandleInstructionContext,0);
};

InstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.enterInstruction(this);
	}
};

InstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.exitInstruction(this);
	}
};

InstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof InstructionSetVisitor ) {
        return visitor.visitInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




InstructionSetParser.InstructionContext = InstructionContext;

InstructionSetParser.prototype.instruction = function() {

    var localctx = new InstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, InstructionSetParser.RULE_instruction);
    try {
        this.state = 76;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case InstructionSetParser.T__1:
            this.enterOuterAlt(localctx, 1);
            this.state = 67;
            this.skipInstruction();
            break;
        case InstructionSetParser.T__2:
            this.enterOuterAlt(localctx, 2);
            this.state = 68;
            this.jumpInstruction();
            break;
        case InstructionSetParser.T__8:
            this.enterOuterAlt(localctx, 3);
            this.state = 69;
            this.pushInstruction();
            break;
        case InstructionSetParser.T__13:
            this.enterOuterAlt(localctx, 4);
            this.state = 70;
            this.popInstruction();
            break;
        case InstructionSetParser.T__15:
            this.enterOuterAlt(localctx, 5);
            this.state = 71;
            this.loadInstruction();
            break;
        case InstructionSetParser.T__20:
            this.enterOuterAlt(localctx, 6);
            this.state = 72;
            this.storeInstruction();
            break;
        case InstructionSetParser.T__21:
            this.enterOuterAlt(localctx, 7);
            this.state = 73;
            this.invokeInstruction();
            break;
        case InstructionSetParser.T__26:
            this.enterOuterAlt(localctx, 8);
            this.state = 74;
            this.executeInstruction();
            break;
        case InstructionSetParser.T__28:
            this.enterOuterAlt(localctx, 9);
            this.state = 75;
            this.handleInstruction();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SkipInstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = InstructionSetParser.RULE_skipInstruction;
    return this;
}

SkipInstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SkipInstructionContext.prototype.constructor = SkipInstructionContext;


SkipInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.enterSkipInstruction(this);
	}
};

SkipInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.exitSkipInstruction(this);
	}
};

SkipInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof InstructionSetVisitor ) {
        return visitor.visitSkipInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




InstructionSetParser.SkipInstructionContext = SkipInstructionContext;

InstructionSetParser.prototype.skipInstruction = function() {

    var localctx = new SkipInstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, InstructionSetParser.RULE_skipInstruction);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 78;
        this.match(InstructionSetParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function JumpInstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = InstructionSetParser.RULE_jumpInstruction;
    return this;
}

JumpInstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
JumpInstructionContext.prototype.constructor = JumpInstructionContext;

JumpInstructionContext.prototype.LABEL = function() {
    return this.getToken(InstructionSetParser.LABEL, 0);
};

JumpInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.enterJumpInstruction(this);
	}
};

JumpInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.exitJumpInstruction(this);
	}
};

JumpInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof InstructionSetVisitor ) {
        return visitor.visitJumpInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




InstructionSetParser.JumpInstructionContext = JumpInstructionContext;

InstructionSetParser.prototype.jumpInstruction = function() {

    var localctx = new JumpInstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, InstructionSetParser.RULE_jumpInstruction);
    try {
        this.state = 98;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 80;
            this.match(InstructionSetParser.T__2);
            this.state = 81;
            this.match(InstructionSetParser.T__3);
            this.state = 82;
            this.match(InstructionSetParser.LABEL);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 83;
            this.match(InstructionSetParser.T__2);
            this.state = 84;
            this.match(InstructionSetParser.T__3);
            this.state = 85;
            this.match(InstructionSetParser.LABEL);
            this.state = 86;
            this.match(InstructionSetParser.T__4);
            this.state = 87;
            this.match(InstructionSetParser.T__5);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 88;
            this.match(InstructionSetParser.T__2);
            this.state = 89;
            this.match(InstructionSetParser.T__3);
            this.state = 90;
            this.match(InstructionSetParser.LABEL);
            this.state = 91;
            this.match(InstructionSetParser.T__4);
            this.state = 92;
            this.match(InstructionSetParser.T__6);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 93;
            this.match(InstructionSetParser.T__2);
            this.state = 94;
            this.match(InstructionSetParser.T__3);
            this.state = 95;
            this.match(InstructionSetParser.LABEL);
            this.state = 96;
            this.match(InstructionSetParser.T__4);
            this.state = 97;
            this.match(InstructionSetParser.T__7);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PushInstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = InstructionSetParser.RULE_pushInstruction;
    return this;
}

PushInstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PushInstructionContext.prototype.constructor = PushInstructionContext;

PushInstructionContext.prototype.LABEL = function() {
    return this.getToken(InstructionSetParser.LABEL, 0);
};

PushInstructionContext.prototype.LITERAL = function() {
    return this.getToken(InstructionSetParser.LITERAL, 0);
};

PushInstructionContext.prototype.SYMBOL = function() {
    return this.getToken(InstructionSetParser.SYMBOL, 0);
};

PushInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.enterPushInstruction(this);
	}
};

PushInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.exitPushInstruction(this);
	}
};

PushInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof InstructionSetVisitor ) {
        return visitor.visitPushInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




InstructionSetParser.PushInstructionContext = PushInstructionContext;

InstructionSetParser.prototype.pushInstruction = function() {

    var localctx = new PushInstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, InstructionSetParser.RULE_pushInstruction);
    try {
        this.state = 112;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 100;
            this.match(InstructionSetParser.T__8);
            this.state = 101;
            this.match(InstructionSetParser.T__9);
            this.state = 102;
            this.match(InstructionSetParser.LABEL);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 103;
            this.match(InstructionSetParser.T__8);
            this.state = 104;
            this.match(InstructionSetParser.T__10);
            this.state = 105;
            this.match(InstructionSetParser.LITERAL);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 106;
            this.match(InstructionSetParser.T__8);
            this.state = 107;
            this.match(InstructionSetParser.T__11);
            this.state = 108;
            this.match(InstructionSetParser.SYMBOL);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 109;
            this.match(InstructionSetParser.T__8);
            this.state = 110;
            this.match(InstructionSetParser.T__12);
            this.state = 111;
            this.match(InstructionSetParser.SYMBOL);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PopInstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = InstructionSetParser.RULE_popInstruction;
    return this;
}

PopInstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PopInstructionContext.prototype.constructor = PopInstructionContext;


PopInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.enterPopInstruction(this);
	}
};

PopInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof InstructionSetListener ) {
        listener.exitPopInstruction(this);
	}
};

PopInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof InstructionSetVisitor ) {
        return visitor.visitPopInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




InstructionSetParser.PopInstructionContext = PopInstructionContext;

InstructionSetParser.prototype.popInstruction = function() {
